--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -1,4 +1,4 @@
-# hash:sha256:a9ca342f588e55347c58363226d257a5be9e3273e6ddb0ab0be78e7622cd3c66
+# hash:sha256:f457b03ae810f340a5cf0b18c81e56ac474660f127df727fbe294b72914d48e8
 FROM registry.codeocean.allenneuraldynamics.org/codeocean/miniconda3:4.9.2-cuda11.7.0-cudnn8-ubuntu20.04
 
 ARG DEBIAN_FRONTEND=noninteractive
@@ -13,6 +13,10 @@ RUN apt-get update \
         libsm6=2:1.2.3-1 \
         libxext6=2:1.3.4-0ubuntu1 \
     && rm -rf /var/lib/apt/lists/*
+
+RUN conda install -y \
+        ruamel.yaml==0.16.12 \
+    && conda clean -ya
 
 RUN pip install -U --no-cache-dir \
     deeplabcut[tf]==2.3.6 \
