--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -1,5 +1,5 @@
-# hash:sha256:2e69446f758a1f7be8b1e631f4c1294746ff2be1fde62662e63c6a3f918d5435
-FROM registry.codeocean.allenneuraldynamics.org/codeocean/miniconda3:4.9.2-cuda11.7.0-cudnn8-ubuntu20.04
+# hash:sha256:e47adabf34277246f189c26549e1cb21b82d3644e3bff0fedd923528cdb55048
+FROM registry.codeocean.allenneuraldynamics.org/codeocean/tensorflow:2.11-python3.10-cuda11.7.0-runtime-ubuntu22.04
 
 ARG DEBIAN_FRONTEND=noninteractive
 
@@ -9,9 +9,9 @@ COPY git-askpass /
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-        ffmpeg=7:4.2.7-0ubuntu0.1 \
-        libsm6=2:1.2.3-1 \
-        libxext6=2:1.3.4-0ubuntu1 \
+        ffmpeg=7:4.4.2-0ubuntu0.22.04.1 \
+        libsm6=2:1.2.3-1build2 \
+        libxext6=2:1.3.4-1build1 \
     && rm -rf /var/lib/apt/lists/*
 
 RUN conda install -y \
@@ -21,10 +21,3 @@ RUN conda install -y \
 RUN pip install -U --no-cache-dir \
     deeplabcut[tf]==2.3.6 \
     moviepy==1.0.3
-
-ADD "https://github.com/coder/code-server/releases/download/v4.9.0/code-server-4.9.0-linux-amd64.tar.gz" /.code-server/code-server.tar.gz
-	
-RUN cd /.code-server \
-	&& tar -xvf code-server.tar.gz \
-	&& rm code-server.tar.gz \
-	&& ln -s /.code-server/code-server-4.9.0-linux-amd64/bin/code-server  /usr/bin/code-server
