--- a/metadata/metadata.yml
+++ b/metadata/metadata.yml
@@ -1,6 +1,7 @@
 metadata_version: 1
 name: aind-capsule-eye-tracking
-description: Port of the lims2 eye-tracking pipeline - outputs annotated points and ellipse fits for eye-perimeter, pupil and corneal reflection.
+description: Port of the lims2 eye-tracking pipeline - outputs annotated points and
+  ellipse fits for eye-perimeter, pupil and corneal reflection.
 authors:
 - name: Various contributors
 - name: Wayne Wakeman
