--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -1,4 +1,4 @@
-# hash:sha256:e47adabf34277246f189c26549e1cb21b82d3644e3bff0fedd923528cdb55048
+# hash:sha256:fd954f7e61e7ad5c9767a8277b0ae795965373e1de166a9f23fb310c19757f6c
 FROM registry.codeocean.allenneuraldynamics.org/codeocean/tensorflow:2.11-python3.10-cuda11.7.0-runtime-ubuntu22.04
 
 ARG DEBIAN_FRONTEND=noninteractive
@@ -10,6 +10,8 @@ COPY git-askpass /
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         ffmpeg=7:4.4.2-0ubuntu0.22.04.1 \
+        libcublas-12-0=12.0.2.224-1 \
+        libcudnn8=8.8.1.3-1+cuda12.0 \
         libsm6=2:1.2.3-1build2 \
         libxext6=2:1.3.4-1build1 \
     && rm -rf /var/lib/apt/lists/*
