add write json function with session

--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -1,4 +1,4 @@
-# hash:sha256:fd954f7e61e7ad5c9767a8277b0ae795965373e1de166a9f23fb310c19757f6c
+# hash:sha256:e80741cca1bbd738b85d2a12c70e0bf1e4767acc3ff5080cd9bd78f30ac642cc
 FROM registry.codeocean.allenneuraldynamics.org/codeocean/tensorflow:2.11-python3.10-cuda11.7.0-runtime-ubuntu22.04
 
 ARG DEBIAN_FRONTEND=noninteractive
@@ -22,4 +22,12 @@ RUN conda install -y \
 
 RUN pip install -U --no-cache-dir \
     deeplabcut[tf]==2.3.6 \
-    moviepy==1.0.3
+    moviepy==1.0.3 \
+    npc-session==0.1.30
+
+ADD "https://github.com/coder/code-server/releases/download/v4.9.0/code-server-4.9.0-linux-amd64.tar.gz" /.code-server/code-server.tar.gz
+	
+RUN cd /.code-server \
+	&& tar -xvf code-server.tar.gz \
+	&& rm code-server.tar.gz \
+	&& ln -s /.code-server/code-server-4.9.0-linux-amd64/bin/code-server  /usr/bin/code-server
