add derived areas

--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -1,4 +1,4 @@
-# hash:sha256:540bba9692d81cf7b2af9738fc42bbfbb968db4c8899b957e3b46cd92bc180f5
+# hash:sha256:3052db5d8a1a39d54a282ae8e323d9d659906bb9dcb543ba1664ea64c15c784f
 FROM registry.codeocean.allenneuraldynamics.org/codeocean/tensorflow:2.11-python3.10-cuda11.7.0-runtime-ubuntu22.04
 
 ARG DEBIAN_FRONTEND=noninteractive
@@ -24,3 +24,10 @@ RUN pip install -U --no-cache-dir \
     deeplabcut[tf]==2.3.6 \
     moviepy==1.0.3 \
     npc-session==0.1.32
+
+ADD "https://github.com/coder/code-server/releases/download/v4.9.0/code-server-4.9.0-linux-amd64.tar.gz" /.code-server/code-server.tar.gz
+	
+RUN cd /.code-server \
+	&& tar -xvf code-server.tar.gz \
+	&& rm code-server.tar.gz \
+	&& ln -s /.code-server/code-server-4.9.0-linux-amd64/bin/code-server  /usr/bin/code-server
